--- a/css/style.css
+++ b/css/style.css
@@ -674,6 +674,11 @@ button {
     font-size: 1.5rem;
     padding-bottom: 0;
 }
+.team-center{
+    margin-left: auto;
+    margin-right: auto
+}
+
 .gallery-item {
     padding: 0 2.5px;
 }
