--- a/css/style.css
+++ b/css/style.css
@@ -894,7 +894,7 @@ button {
      margin-top: 18%;
 }
 .text-404 h1 {
-    font-family: Anurati, sans-serif;
+    font-family: Roboto-Regular, sans-serif;
     font-size: 4rem;
 }
 .text-404 a {
